[Nav Experiment] Update FormsTestCase setup for WKBasedNavigationManger.

These tests currently assume that the repost confirmation dialog is
shown on back/forward navigation. This is not true for
WKBasedNavigationManager because it matches WKWebView behavior, which
uses back/forward cache for back/forward navigation. This CL adds
|reload| to explicitly trigger the repost confirmation dialog.

Bug: 874635
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I24dafdd02014184f3fbc5b86f1026ebe8f5f00c7
Reviewed-on: https://chromium-review.googlesource.com/1243323
Commit-Queue: Danyao Wang <danyao@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593965}